Legend:

[+] New/improved feature
[B] Bug fixed
[K] Known issue
[O] Other

Change log
==========

v0.10.3

[O] added cclockid class to prevent invalid use of class ctimespec
[B] crofconn: fixed potential race condition causing a Hello expiration

v0.10.2

[+] more verbose exception handling
[+] asserts to thread handlers
[+] cthread: ignore signals in event loop
[B] coxmatches::copy_matches(): copy experimental matches properly

v0.10.1

[B] fixed a race condition in crofsock::send_from_queue()

v0.10.0

[+] revised workflow
[+] enhanced flow control
[+] revised exceptions structure
[+] new journaling subsystem replacing logging facility

v0.7.0

[+] New internal threading model, running rofl's main ioloop by 
    application not necessary any more
[O] Revised API of classes cofmsg_group_mod and cofgroupmod

v0.6.2

[O] merged logging related pull request #1
[B] fixed stalling situation in crofsock under higher load
[B] making class indent thread aware
[B] fixed buffer bloat like situation in crofqueue under high loads
[O] fixed hex output in some coxmatch classes (Fixed issue #14)
[O] fixed hex output for classes cofgroupmod and cofmsg_group_mod 
    for group-id. Fixes issue #13.

v0.6.1

[B] Distributing missing ctspaddress.h
[B] Fix versioning.m4 for subpackage and out-of-repository builds

v0.6.0

[K] Prevent compilation with buggy GCC versions (-O3 opt.)

[+] Workaround for automake 1.14 subdir-objects bug(13928).
[+] Fixed some LLVM related warnings and errors (clang/clang++)

[+][hal] Added NF port extensions

[+][pipeline] Added missing support for OFPP_TABLE
[+][pipeline] Added NF port type extensions
[+][pipeline] Added L2 (ETH_DST, VLAN) l2hash matching algorithm
[B][pipeline] Fixed issue #40 (bug) => set cookie field in Packet-In messages based on flow entry
[+][common] All crofsock instances run in dedicated own thread
[+][common] Revised thread support in ciosrv
[+][common] Revised classes crofconn and crofsock => new scheduling for OpenFlow messages