@@ -172,7 +172,7 @@ crofsock::close()
 		shutdown(sd, O_RDWR);
 
 		/* allow socket to send shutdown notification to peer */
-		sleep(1);
+		/* sleep(1); // use SO_LINGER option instead */
 		if (sd > 0)
 			::close(sd);
 		sd = -1;
@@ -418,6 +418,20 @@ crofsock::tcp_accept(
 		}
 	}
 
+	/* get SO_LINGER option */
+	struct linger l;
+	socklen_t l_len = sizeof(l);
+	if ((::getsockopt(sd, SOL_SOCKET, SO_LINGER, &l, &l_len)) < 0) {
+		throw eSysCall("eSysCall", "getsockopt (SO_LINGER)", __FILE__, __PRETTY_FUNCTION__, __LINE__);
+	}
+
+	/* set SO_LINGER option */
+	l.l_onoff = 1; /* activate SO_LINGER option */
+	l.l_linger = 1; /* second(s) */
+	if ((::setsockopt(sd, SOL_SOCKET, SO_LINGER, &l, l_len)) < 0) {
+		throw eSysCall("eSysCall", "setsockopt (SO_LINGER)", __FILE__, __PRETTY_FUNCTION__, __LINE__);
+	}
+
 	state = STATE_TCP_ESTABLISHED;
 
 	journal.log(LOG_INFO, "STATE_TCP_ESTABLISHED");
@@ -491,6 +505,20 @@ crofsock::tcp_connect(
 		if ((rc = ::setsockopt(sd, IPPROTO_TCP, TCP_NODELAY, &optval, sizeof(optval))) < 0) {
 			throw eSysCall("eSysCall", "setsockopt (TCP_NODELAY)", __FILE__, __PRETTY_FUNCTION__, __LINE__);
 		}
+	}
+
+	/* get SO_LINGER option */
+	struct linger l;
+	socklen_t l_len = sizeof(l);
+	if ((rc = ::getsockopt(sd, SOL_SOCKET, SO_LINGER, &l, &l_len)) < 0) {
+		throw eSysCall("eSysCall", "getsockopt (SO_LINGER)", __FILE__, __PRETTY_FUNCTION__, __LINE__);
+	}
+
+	/* set SO_LINGER option */
+	l.l_onoff = 1; /* activate SO_LINGER option */
+	l.l_linger = 1; /* second(s) */
+	if ((rc = ::setsockopt(sd, SOL_SOCKET, SO_LINGER, &l, l_len)) < 0) {
+		throw eSysCall("eSysCall", "setsockopt (SO_LINGER)", __FILE__, __PRETTY_FUNCTION__, __LINE__);
 	}
 
 	/* bind to local address */
