@@ -12,6 +12,7 @@ v0.10.3
 
 [O] added cclockid class to prevent invalid use of class ctimespec
 [B] crofconn: fixed potential race condition causing a Hello expiration
+[+] crofsock: use SO_LINGER option for coordinated shutdown
 
 v0.10.2
 
